--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="container-fluid">
   <nav class="navbar bg-body-tertiary fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">Paradigma logico</a>
+      <a class="navbar-brand" href="index.html">Paradigma lógico</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
         aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -34,10 +34,10 @@
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#carousel">Introdução</a>
+              <a class="nav-link active" aria-current="page" href="#div-1">Introdução</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#div-1">Paradigma Logico</a>
+              <a class="nav-link active" aria-current="page" href="#carousel">Paradigma Lógico</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -70,55 +70,92 @@
     </div>
   </nav>
 </div>
-  <!-- carousel texto
+  <!-- div
 ================================================== -->
+<div class="container" id="div-1">
+  <div class="row justify-content-center">
+    <h1 class="title"> Introdução</h1>
+    <p>
+      Some people think design means how it looks. But of course, if you dig deeper, it's really how it
+        works. Design must reflect the practical and aesthetic in business but above all...
+        good design must primarily serve people. Some people think design means how it looks.
+        Some people think design means how it looks. But of course, if you dig deeper, it's really how it works.
+        Design must reflect the practical and aesthetic in business but above all...
+        good design must primarily serve people. Some people think design means how it looks
+    </p>
+    <p>
+      Some people think design means how it looks. But of course, if you dig deeper, it's really how it
+        works. Design must reflect the practical and aesthetic in business but above all...
+        good design must primarily serve people. Some people think design means how it looks.
+        Some people think design means how it looks. But of course, if you dig deeper, it's really how it works.
+        Design must reflect the practical and aesthetic in business but above all...
+        good design must primarily serve people. Some people think design means how it looks
+    </p>
+    <p>
+      Some people think design means how it looks. But of course, if you dig deeper, it's really how it
+        works. Design must reflect the practical and aesthetic in business but above all...
+        good design must primarily serve people. Some people think design means how it looks.
+        Some people think design means how it looks. But of course, if you dig deeper, it's really how it works.
+        Design must reflect the practical and aesthetic in business but above all...
+        good design must primarily serve people. Some people think design means how it looks
+    </p>
+    <p>
+      Some people think design means how it looks. But of course, if you dig deeper, it's really how it
+        works. Design must reflect the practical and aesthetic in business but above all...
+        good design must primarily serve people. Some people think design means how it looks.
+        Some people think design means how it looks. But of course, if you dig deeper, it's really how it works.
+        Design must reflect the practical and aesthetic in business but above all...
+        good design must primarily serve people. Some people think design means how it looks
+    </p>
+  </div>
+</div>
+
+<!-- carousel texto
+================================================== -->
+<h1 class="title-carousel"> Sobre o Paradigma Lógico</h1>
 <div class="container-carousel" id="carousel">
   <div class="row">
     <div class="col-lg-12">
 <div id="carouselExampleFade" class="carousel slide carousel-fade">
   <div class="carousel-inner">
-    <h1 class="title-carousel"> Introdução</h1>
     <div class="carousel-item active">
-      <p class="pcouresel">Some people think design means how it looks. But of course, if you dig deeper, it's really how it
-        works. Design must reflect the practical and aesthetic in business but above all...
-        good design must primarily serve people. Some people think design means how it looks.
-        Some people think design means how it looks. But of course, if you dig deeper, it's really how it works.
-        Design must reflect the practical and aesthetic in business but above all...
-        good design must primarily serve people. Some people think design means how it looks</p>
-        <p class="pcouresel">Some people think design means how it looks. But of course, if you dig deeper, it's really how it
-          works. Design must reflect the practical and aesthetic in business but above all...
-          good design must primarily serve people. Some people think design means how it looks.
-          Some people think design means how it looks. But of course, if you dig deeper, it's really how it works.
-          Design must reflect the practical and aesthetic in business but above all...
-          good design must primarily serve people. Some people think design means how it looks</p>
+      <h2 class="subtitle"> Curiosidades</h2>
+      <ul class="listcarousel">
+        <li> Base na lógica matemática </i></li>
+        <li> Similar a um problema em que um ser humano raciocinaria;</li> 
+        <li> Linguagem declarativa; </li>
+        <li> Conjunto de premissas que devem ser satisfeitas para obter um retorno verdadeiro; </li>
+        <li> Marco da Inteligência artificial;  </li>             
+     </ul>
     </div>
     <div class="carousel-item">
-      <p class="pcouresel">Some people think design means how it looks. But of course, if you dig deeper, it's really how it
-        works. Design must reflect the practical and aesthetic in business but above all...
-        good design must primarily serve people. Some people think design means how it looks.
-        Some people think design means how it looks. But of course, if you dig deeper, it's really how it works.
-        Design must reflect the practical and aesthetic in business but above all...
-        good design must primarily serve people. Some people think design means how it looks</p>
+      <h2 class="subtitle"> Características do Paradigma:</h2>
+      <ul class="listcarousel">
+        <li> Independência da ordem das operações.</li>
+        <li> Utilização de backtracking</li>          
+     </ul>
+     <img src="img/Foto em preto e branco__Descrição gerada automaticamente.jpg" alt="" class="img_carousel">
     </div>
     <div class="carousel-item">
-      <p class="pcouresel">Some people think design means how it looks. But of course, if you dig deeper, it's really how it
-        works. Design must reflect the practical and aesthetic in business but above all...
-        good design must primarily serve people. Some people think design means how it looks.
-        Some people think design means how it looks. But of course, if you dig deeper, it's really how it works.
-        Design must reflect the practical and aesthetic in business but above all...
-        good design must primarily serve people. Some people think design means how it looks</p>
-        <p class="pcouresel">Some people think design means how it looks. But of course, if you dig deeper, it's really how it
-          works. Design must reflect the practical and aesthetic in business but above all...
-          good design must primarily serve people. Some people think design means how it looks.
-          Some people think design means how it looks. But of course, if you dig deeper, it's really how it works.
-          Design must reflect the practical and aesthetic in business but above all...
-          good design must primarily serve people. Some people think design means how it looks</p>
-          <p class="pcouresel">Some people think design means how it looks. But of course, if you dig deeper, it's really how it
-            works. Design must reflect the practical and aesthetic in business but above all...
-            good design must primarily serve people. Some people think design means how it looks.
-            Some people think design means how it looks. But of course, if you dig deeper, it's really how it works.
-            Design must reflect the practical and aesthetic in business but above all...
-            good design must primarily serve people. Some people think design means how it looks</p>
+      <h2 class="subtitle"> Vantagens:</h2>
+      <ul class="listcarousel">
+        <li> Permite a concepção da aplicação em alto nível de abstração;  </li>
+        <li> Linguagem mais próxima do raciocínio humano;</li>            
+     </ul>
+    </div>
+    <div class="carousel-item">
+      <h2 class="subtitle"> Desvantagens:</h2>
+      <ul class="listcarousel">
+        <li> Dificuldade em lidar com problemas de algoritmos complexos; </li>
+        <li> Complexidade exponencial;</li>            
+     </ul>
+    </div>
+    <div class="carousel-item">
+      <h2 class="subtitle"> Diferenças do Paradigma Lógico para Outros Paradigmas:</h2>
+      <ul class="listcarousel">
+        <li> Imperativo x lógico</li>
+        <li> Orientado ao objeto x lógico </li>            
+     </ul>
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -133,66 +170,28 @@
 </div>
 </div>
 </div>
- 
-  <!-- div
-================================================== -->
-<div class="container" id="div-1">
-  <div class="row justify-content-center">
-    <h1 class="title"> Paradigma Logico</h1>
-    <p>
-      Some people think design means how it looks. But of course, if you dig deeper, it's really how it
-        works. Design must reflect the practical and aesthetic in business but above all...
-        good design must primarily serve people. Some people think design means how it looks.
-        Some people think design means how it looks. But of course, if you dig deeper, it's really how it works.
-        Design must reflect the practical and aesthetic in business but above all...
-        good design must primarily serve people. Some people think design means how it looks
-    </p>
-    <p>
-      Some people think design means how it looks. But of course, if you dig deeper, it's really how it
-        works. Design must reflect the practical and aesthetic in business but above all...
-        good design must primarily serve people. Some people think design means how it looks.
-        Some people think design means how it looks. But of course, if you dig deeper, it's really how it works.
-        Design must reflect the practical and aesthetic in business but above all...
-        good design must primarily serve people. Some people think design means how it looks
-    </p>
-    <p>
-      Some people think design means how it looks. But of course, if you dig deeper, it's really how it
-        works. Design must reflect the practical and aesthetic in business but above all...
-        good design must primarily serve people. Some people think design means how it looks.
-        Some people think design means how it looks. But of course, if you dig deeper, it's really how it works.
-        Design must reflect the practical and aesthetic in business but above all...
-        good design must primarily serve people. Some people think design means how it looks
-    </p>
-    <p>
-      Some people think design means how it looks. But of course, if you dig deeper, it's really how it
-        works. Design must reflect the practical and aesthetic in business but above all...
-        good design must primarily serve people. Some people think design means how it looks.
-        Some people think design means how it looks. But of course, if you dig deeper, it's really how it works.
-        Design must reflect the practical and aesthetic in business but above all...
-        good design must primarily serve people. Some people think design means how it looks
-    </p>
-  </div>
-</div>
+
   <!-- div
 ================================================== -->
   <div class="container">
-    <h1 class="title"> Prolog</h1>
+    <h1 class="title"> Prolog </h1>
     <div class="d-flex align-items-start text-center">
       <div class="nav flex-column nav-pills me-10" id="v-pills-tab" role="tablist" aria-orientation="vertical">
         <button class="nav-link active" id="v-pills-tab1" data-bs-toggle="pill" data-bs-target="#v-pills-home"
-          type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">Introducao</button>
+          type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">Curiosidades</button>
         <button class="nav-link" id="v-pills-tab2" data-bs-toggle="pill" data-bs-target="#v-pills-profile" type="button"
-          role="tab" aria-controls="v-pills-profile" aria-selected="false"> O que é?</button>
+          role="tab" aria-controls="v-pills-profile" aria-selected="false"> Características do Paradigma</button>
         <button class="nav-link" id="v-pills-tab3" data-bs-toggle="pill" data-bs-target="#v-pills-disabled"
-          type="button" role="tab" aria-controls="v-pills-disabled" aria-selected="false">Como funciona?</button>
+          type="button" role="tab" aria-controls="v-pills-disabled" aria-selected="false">Vantagens</button>
         <button class="nav-link" id="v-pills-tab4" data-bs-toggle="pill" data-bs-target="#v-pills-messages"
-          type="button" role="tab" aria-controls="v-pills-messages" aria-selected="false">Observações</button>
+          type="button" role="tab" aria-controls="v-pills-messages" aria-selected="false">Desvantagens</button>
         <button class="nav-link" id="v-pills-tab5" data-bs-toggle="pill" data-bs-target="#v-pills-settings"
-          type="button" role="tab" aria-controls="v-pills-settings" aria-selected="false">referencias</button>
+          type="button" role="tab" aria-controls="v-pills-settings" aria-selected="false">Principais Diferenças do Paradigma Lógico para Outros Paradigmas</button>
       </div>
       <div class="tab-content" id="v-pills-tabContent">
         <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab"
           tabindex="0">
+          <h2></h2>
           <p>Some people think design means how it looks. But of course, if you dig deeper, it's really how it works.
             Design must reflect the practical and aesthetic in business but above all...
             good design must primarily serve people. Some people think design means how it looks.
@@ -207,7 +206,9 @@
           good design must primarily serve people. Some people think design means how it looks.
           Some people think design means how it looks. But of course, if you dig deeper, it's really how it works.
           Design must reflect the practical and aesthetic in business but above all...
-          good design must primarily serve people. Some people think design means how it looks.</div>
+          good design must primarily serve people. Some people think design means how it looks.
+          <img src="img/content-1.jpg" alt="" class="img_test">
+        </div>
         <div class="tab-pane fade" id="v-pills-disabled" role="tabpanel" aria-labelledby="v-pills-disabled-tab"
           tabindex="0">Some people think design means how it looks. But of course, if you dig deeper, it's really how it
           works. Design must reflect the practical and aesthetic in business but above all...
