--- a/index.html
+++ b/index.html
@@ -561,8 +561,20 @@
     <li><strong> O Ambiente:</strong> Gratuito e abrangente, desde seu início em 1987, o
       desenvolvimento do SWI-PROLOG tem sido impulsionado pelas necessidades de aplicação
       no mundo real; é amplamente usado em pesquisa e educação disponibilizando livros, tutoriais
-      comunidades, documentação entre outros.   
+      comunidades, documentação entre outros.  
+    </li>
+    <li><strong> Vamos entender como funciona o Prolog na prática:</strong>
  </ul>
+</div>
+  <!-- Button
+================================================== -->
+<div class="container-button" id="">
+  <div class="row justify-content-center">
+    <h1 class="title-qr"></h1>
+    <div class="col-lg-12 ">
+      <a href="index2.html" class="btn btn-dark">Ir para Prolog na Pratica</a>
+    </div>
+  </div>
 </div>
   <!-- QR code
 ================================================== 
@@ -623,7 +635,6 @@
       </ul>
     </div>
   </div>
-
 
   
 </body>
