--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Grupo -->
 
 <div class="container-top">
     <div id="wrapper">
-        <h1 class="title-tema">Paradigmas Lógico</h1>
+        <h1 class="title-tema">Paradigma Lógico</h1>
         <div class="mobile">
                 <!-- Checkbox menu -->
                 <input type="checkbox" id="tm" />
